@@ -18,9 +18,17 @@
 		
 		<java.version>1.6</java.version>
 		<aspectj.version>1.7.0</aspectj.version>
-		<spring.version>3.1.2.RELEASE</spring.version>
+		<spring.version>3.2.0.BUILD-SNAPSHOT</spring.version>
 		<slf4j.version>1.6.6</slf4j.version>
 	</properties>
+	
+	<repositories>
+		<repository>
+			<id>repository.springsource.snapshot</id>
+			<name>SpringSource Snapshot Repository</name>
+			<url>http://repo.springsource.org/snapshot</url>
+		</repository>
+	</repositories>
 	
 	<dependencies>
 		<!-- Spring -->
@@ -78,13 +86,6 @@
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjweaver</artifactId>
 			<version>${aspectj.version}</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>cglib</groupId>
-			<artifactId>cglib-nodep</artifactId>
-			<version>2.2.2</version>
-			<scope>runtime</scope>
 		</dependency>
 		
 		<!-- Database -->
@@ -257,7 +258,10 @@
 				<artifactId>jetty-maven-plugin</artifactId>
 				<version>8.1.5.v20120716</version>
 				<configuration>
-					<scanIntervalSeconds>5</scanIntervalSeconds>
+					<!--scanIntervalSeconds>5</scanIntervalSeconds-->
+					<stopKey>exit</stopKey>
+					<stopPort>9999</stopPort>
+					<jvmArgs>-XX:PermSize=64M -XX:MaxPermSize=128M -XX:+CMSClassUnloadingEnabled</jvmArgs>
 				</configuration>
 			</plugin>
 			
